--- a/src/index.css
+++ b/src/index.css
@@ -106,12 +106,13 @@ a:hover {
 
  /*My custom styles  */
 .signup{
-  justify-content:center;
-  position:relative;
-  top:50px;
-  left:480px;
-  width:350px;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 16px 24px;
+  gap: 16px;
+  width: 100%;
 }
  #git-icon{
   width:40px;
@@ -120,20 +121,20 @@ a:hover {
   top:10px;
   left:18px;
  }
- 
  .signup-card{
   position:relative;
   top:25px;
  }
 .signup-header{
-  position:relative;
-  left:140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
 }
 .below-signup{
-  height:60px;
-  position:relative;
-  top:40px;
-  padding-left:60px;
+  width: min(100%, 420px);
+  padding: 12px 16px;
+  text-align: center;
 }
  #form-labels{
   display:flex;
@@ -141,16 +142,26 @@ a:hover {
 }
 
 #submit-btn{
-  position:relative;
-  left:35px;
-  padding-left:100px;
-  padding-right: 100px;
+  width: 100%;
+  padding: 8px 16px;
 }
 #git-icon-dashboard{
   width:30px;
   height:30px;
   position:relative;
   left:5px;
+}
+
+.top-nav {
+  height: 56px;
+  border-bottom: 1px solid #d0d7de;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  justify-content: space-between;
+  gap: 16px;
+  flex-wrap: wrap;
 }
 
 .top-nav-left {
@@ -164,13 +175,13 @@ a:hover {
 .nav-search{
   display:flex;
   flex-direction:row;
+  align-items: center;
+  gap: 8px;
+  flex: 1 1 360px;
 }
 .nav-search .search-btn{
-  width:100px;
-  height:35px;
-  margin-left:10px;
-  position:relative;
-  top:5px;
+  width: auto;
+  height: 35px;
 }
 
 .top-nav-left p {
@@ -182,10 +193,9 @@ a:hover {
 /* Create New Repo Page */
 
 .create-new-repo{
-  width:500px;
-  position:relative;
-  left:450px;
-  top:70px;
+  width: min(100%, 640px);
+  margin: 48px auto 0;
+  padding: 0 16px 32px;
 }
 .nav-profile img{
   height:40px;
@@ -210,7 +220,29 @@ a:hover {
   padding: 10px;
   border-bottom: 1px solid #e5e7eb;
 }
+@media (max-width: 900px) {
+  .top-nav {
+    height: auto;
+    padding: 12px 16px;
+  }
 
+  .nav-search {
+    width: 100%;
+    order: 3;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 600px) {
+  .nav-search {
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .top-nav-left p {
+    display: none;
+  }
+}
 
 
 
