--- a/src/index.css
+++ b/src/index.css
@@ -280,6 +280,10 @@ a:hover {
 }
 
 @media (max-width: 600px) {
+   .top-nav-left {
+    margin-left: 44px;
+  }
+  
   .nav-search {
     flex-direction: column;
     align-items: stretch;
